# tasks

./: ._dev.env  ._prod.env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  Makefile  README.md  cspell.config.yaml  devbox.json  docker-compose.prod.yml  docker-compose.yml  justfile  make.env  pyproject.toml  requirements.txt
.archive/: test.yml
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.env/: test.env
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: deploy.yml  lint.yml  pdm.yml  push.yml  test.yml
_env/: dev.env  example.env  prod.env  test.env
alembic/: env.py
alembic/versions/: 96c0c25be6e5_modify_items_table.py
app/: database.py  env.py  main.py  models.py  prestart.sh  pyproject.toml  schemas.py
app/alembic/: env.py  script.py.mako
app/alembic/versions/: 96c0c25be6e5_modify_items_table.py  b893ca67756a_remove_order_pinned_from_items.py
app/database/: __init__.py  items.py  lists.py  projects.py  sections.py  tables.py
app/database/core/: __init__.py  session.py  tables.py
app/database/projects/: router.py
app/models/: items.py  lists.py  priority.py  projects.py  sections.py  utils.py
app/models/utils/: columns.py  datetime.py
app/routers/: items.py  lists.py  projects.py  session.py
data/: data.db  dev.db  prod.db  test.db
docker-images/: python3.10.8-slim.dockerfile  python3.10.8.dockerfile  python3.11.1-slim.dockerfile  requirements.txt  start-reload.sh  start.sh
docker-images/alembic/: env.py
docker-images/alembic/versions/: 96c0c25be6e5_modify_items_table.py
docker-images/app/: database.py
scripts/: build-push-all.sh  build-push.sh  build.sh  clean.sh  clean_app.sh  copy_app.sh  create_production_requirements.sh  create_requirements.sh  format-imports.sh  format.sh  lint.sh  process_all.py  start_app_venv.sh  test.sh
tests/: conftest.py  utils.py
tests/test_01_main/: test_defaults.py  test_env_vars_1.py  test_env_vars_2.py  test_env_vars_3.py
tests/test_02_database/: test_lists.py  test_projects.py  test_tables.py
tests/test_02_models/: test_items.py  test_lists.py  test_sections.py
tests/test_03_database/: conftest.py  test_items.py  test_lists.py  test_sections.py  test_tables.py
tests/test_03_routers/: test_items.py  test_main.py  test_projects.py
tests/test_04_routers/: conftest.py  test_main.py  test_routes.py
tests/test_04_routers/lists/: test_delete.py  test_get.py  test_patch.py  test_post.py
