[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ian Cleary", email = "hello@iancleary.me"},
]
dependencies = [
    "fastapi==0.89.1",
    "SQLAlchemy==1.4.46",
    "uvicorn[standard]==0.20.0",
    "gunicorn==20.1.0",
    "fastapi-restful[session]==0.4.3",
    "environs==9.5.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.0",
    "black==22.10.0",
    "mypy==0.990",
    "httpx==0.23.1",
    "ruff==0.0.223",
]

[tool.isort]
src_paths = ["app", "test"]
force_single_line = true
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
line_length = 88

[tool.autoflake]
remove-all-unused-imports = true
recursive = true
remove-unused-variables = true
in-place = true
expand-star-imports = true
exclude = "__init__.py"
remove-duplicate-keys = true

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["TID2", "E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
