[project]
name = "tasks"
description = ""
authors = [
    {name = "Ian Cleary", email = "github@iancleary.me"},
]
dependencies = [
    "fastapi==0.99.1",
    "SQLAlchemy==2.0.15",
    "uvicorn[standard]==0.22.0",
    "gunicorn==20.1.0",
    "environs==9.5.0",
    "alembic==1.11.1",
    "tzdata>=2023.3",
    "fastapi-cors>=0.0.4",
]
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest==7.2.0",
    "black==22.10.0",
    "mypy==0.990",
    "httpx==0.23.1",
    "ruff>=0.0.282",
    "pytest-pretty==1.2.0",
    "isort==5.12.0",
    "pre-commit>=3.3.3",
]

[tool.ruff]
line-length = 88

# Enable Pyflakes `E` and `F` codes by default.
select = ["TID2", "E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docker_images/alembic",
    "docker_images/app"
]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = ['alembic/']

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
